[package]
name = "collapse"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
license = "MIT"

[lib]
name = "collapse"
path = "src/lib.rs"

[[bin]]
name = "runcollapse"
path = "src/main.rs"

[dependencies]
bitflags = "0.7"
bit-set = "0.4.0"
bit-vec = "0.4.3"
clap = "2"
image = "*"
lazy_static = "0.2.1"
log = "0.3.6"
ndarray = "0.6.7"
pbr = "0.3.1"
rand = "0.3.14"
regex = "0.1"
vosealias = { git = "https://github.com/sdleffler/vosealias-rs" }

[dev-dependencies]
env_logger = "0.3"
